--- a/Clase CSS/index.html
+++ b/Clase CSS/index.html
@@ -5,7 +5,10 @@
 <body>
     <h1>SUPERMAN</h1>
     </br>
-    <p>Superman es un superhéroe ficticio que apareció por primera vez en los cómics estadounidenses publicados por DC Comics.​​​​El personaje fue creado por el escritor estadounidense Jerry Siegel y el artista canadiense Joe Shuster en 1933 cuando ambos se encontraban viviendo en Cleveland, Ohio. </p>
+    <p class="parrafo">Superman es un superhéroe ficticio que apareció por primera vez en los cómics estadounidenses publicados por DC Comics.​​​​El personaje fue creado por el escritor estadounidense Jerry Siegel y el artista canadiense Joe Shuster en 1933 cuando ambos se encontraban viviendo en Cleveland, Ohio. </p>
+    <h2>La trama Principal</h2>
+    <p id="parrafoInferior">ADSFBUIAEHWUIHFUIRHUFHWEUIHFUEU</p>
+    <h2>Otro subtitulo</h2>
 </body>
 
 </html>
